# cairn

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.claude/agents/: README.md  ai-integration-engineer.md  bug-bot.md  code-reviewer.md  container-backend-engineer.md  devops-engineer.md  qa-engineer.md  (+17 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/cairn/: Cargo.toml
crates/cairn-ai/: Cargo.toml
crates/cairn-ai/src/: context.rs  degrade.rs  lib.rs  plan.rs  provider.rs  tools.rs
crates/cairn-ai/src/http/: anthropic.rs  mod.rs  ollama.rs
crates/cairn-backend-archive/: Cargo.toml
crates/cairn-backend-archive/src/: compressed_tar.rs  index.rs  lib.rs  security.rs  tar_backend.rs  vfs.rs  zip_backend.rs
crates/cairn-backend-docker/: Cargo.toml
crates/cairn-backend-docker/src/: discovery.rs  lib.rs  ops.rs  real.rs
crates/cairn-backend-docker/tests/: docker_dind.rs
crates/cairn-backend-k8s/: Cargo.toml
crates/cairn-backend-k8s/src/: discovery.rs  lib.rs  ops.rs  real.rs  tar_exec.rs
crates/cairn-backend-k8s/tests/: k8s_kind.rs
crates/cairn-backend-local/: Cargo.toml
crates/cairn-backend-local/src/: lib.rs
crates/cairn-backend-object/: Cargo.toml
crates/cairn-backend-object/src/: azure.rs  gcs.rs  lib.rs  mock.rs  s3.rs  vfs.rs
crates/cairn-backend-object/tests/: azure_azurite.rs  s3_minio.rs
crates/cairn-backend-ssh/: Cargo.toml
crates/cairn-backend-ssh/src/: connect.rs  lib.rs  ops.rs  real.rs
crates/cairn-backend-ssh/tests/: copy_repro.rs  sftp_server_repro.rs
crates/cairn-broker/: Cargo.toml
crates/cairn-broker-api/: Cargo.toml
crates/cairn-broker-api/src/: lib.rs
crates/cairn-broker-api/tests/: isolation.rs
crates/cairn-broker/src/: lib.rs
crates/cairn-config/: Cargo.toml
crates/cairn-config/src/: error.rs  lib.rs
crates/cairn-core/: Cargo.toml
crates/cairn-core/src/: forms.rs  help.rs  lib.rs  msg.rs  state.rs  update.rs
crates/cairn-mcp/: Cargo.toml
crates/cairn-mcp/src/: lib.rs
crates/cairn-plugin/: Cargo.toml
crates/cairn-plugin/src/: backend.rs  bridge.rs  component.rs  epoch.rs  handle.rs  http_fetch.rs  lib.rs  loader.rs  manifest.rs  wasi_narrowing.rs
crates/cairn-plugin/tests/: brokered_host_fns.rs  vfs_backend.rs
crates/cairn-plugin/tests/fixture-guest/: Cargo.toml
crates/cairn-plugin/tests/fixture-guest/src/: lib.rs
crates/cairn-plugin/tests/fixtures/: backend.wasm  wasi_spin.wasm
crates/cairn-plugin/wit/: plugin.wit
crates/cairn-secrets/: Cargo.toml
crates/cairn-secrets/src/: lib.rs
crates/cairn-transfer/: Cargo.toml
crates/cairn-transfer/src/: error.rs  lib.rs
crates/cairn-tui/: Cargo.toml
crates/cairn-tui/src/: keymap.rs  lib.rs  render.rs  scenarios.rs  theme.rs
crates/cairn-tui/src/snapshots/: cairn_tui__scenarios__snapshot_tests__ai-plan-irreversible__40x12.snap  cairn_tui__scenarios__snapshot_tests__ai-plan-irreversible__80x24.snap  cairn_tui__scenarios__snapshot_tests__ai-plan-safe__40x12.snap  cairn_tui__scenarios__snapshot_tests__ai-plan-safe__80x24.snap  cairn_tui__scenarios__snapshot_tests__confirm-delete__40x12.snap  cairn_tui__scenarios__snapshot_tests__confirm-delete__80x24.snap  cairn_tui__scenarios__snapshot_tests__confirm-overwrite__40x12.snap  cairn_tui__scenarios__snapshot_tests__confirm-overwrite__80x24.snap  cairn_tui__scenarios__snapshot_tests__confirm-writeback__40x12.snap  cairn_tui__scenarios__snapshot_tests__confirm-writeback__80x24.snap  cairn_tui__scenarios__snapshot_tests__connections-pin-hide__40x12.snap  cairn_tui__scenarios__snapshot_tests__connections-pin-hide__80x24.snap  cairn_tui__scenarios__snapshot_tests__connections__40x12.snap  cairn_tui__scenarios__snapshot_tests__connections__80x24.snap  cairn_tui__scenarios__snapshot_tests__delete-active__40x12.snap  cairn_tui__scenarios__snapshot_tests__delete-active__80x24.snap  cairn_tui__scenarios__snapshot_tests__dual-pane__40x12.snap  cairn_tui__scenarios__snapshot_tests__dual-pane__80x24.snap  cairn_tui__scenarios__snapshot_tests__exec-pane__40x12.snap  cairn_tui__scenarios__snapshot_tests__exec-pane__80x24.snap  cairn_tui__scenarios__snapshot_tests__filter__40x12.snap  cairn_tui__scenarios__snapshot_tests__filter__80x24.snap  cairn_tui__scenarios__snapshot_tests__folder-stats-computing__40x12.snap  cairn_tui__scenarios__snapshot_tests__folder-stats-computing__80x24.snap  cairn_tui__scenarios__snapshot_tests__folder-stats-done__40x12.snap  cairn_tui__scenarios__snapshot_tests__folder-stats-done__80x24.snap  cairn_tui__scenarios__snapshot_tests__folder-stats-partial__40x12.snap  cairn_tui__scenarios__snapshot_tests__folder-stats-partial__80x24.snap  cairn_tui__scenarios__snapshot_tests__help__40x12.snap  cairn_tui__scenarios__snapshot_tests__help__80x24.snap  cairn_tui__scenarios__snapshot_tests__huge-listing__40x12.snap  cairn_tui__scenarios__snapshot_tests__huge-listing__80x24.snap  cairn_tui__scenarios__snapshot_tests__loading-error__40x12.snap  cairn_tui__scenarios__snapshot_tests__loading-error__80x24.snap  cairn_tui__scenarios__snapshot_tests__log-viewer__40x12.snap  cairn_tui__scenarios__snapshot_tests__log-viewer__80x24.snap  cairn_tui__scenarios__snapshot_tests__menu__40x12.snap  cairn_tui__scenarios__snapshot_tests__menu__80x24.snap  cairn_tui__scenarios__snapshot_tests__pager-hex__40x12.snap  cairn_tui__scenarios__snapshot_tests__pager-hex__80x24.snap  (+26 more)
crates/cairn-types/: Cargo.toml
crates/cairn-types/src/: archive_magic.rs  caps.rs  creds.rs  entry.rs  ids.rs  lib.rs  path.rs  space.rs
crates/cairn-vault/: Cargo.toml
crates/cairn-vault/src/: cred.rs  error.rs  lib.rs  unlock.rs
crates/cairn-vfs/: Cargo.toml
crates/cairn-vfs/src/: action.rs  error.rs  handle.rs  lib.rs  mock.rs  registry.rs  retry.rs  vfs.rs
crates/cairn/src/: app.rs  cli.rs  connect.rs  executor.rs  logging.rs  main.rs  panic.rs
crates/cairn/src/connect/: coordinator.rs  descriptor.rs  mod.rs  provider.rs
crates/cairn/tests/: tmux_e2e.rs
docs/: IMPLEMENTATION_PLAN.md  LLD.md  PRD.md  README.md
(+35 files in other folders)
