[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zoza1982/cairn"
homepage = "https://github.com/zoza1982/cairn"
authors = ["The Cairn Authors"]
keywords = ["tui", "file-manager", "cloud", "kubernetes", "s3"]
categories = ["command-line-utilities", "filesystem"]

# Lints applied across the whole workspace. Keep the bar high.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
