[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zoza1982/cairn"
homepage = "https://github.com/zoza1982/cairn"
authors = ["The Cairn Authors"]
keywords = ["tui", "file-manager", "cloud", "kubernetes", "s3"]
categories = ["command-line-utilities", "filesystem"]

# Internal crates are referenced via the workspace so their (path + version) is declared once.
# The version makes them non-wildcard for cargo-deny and keeps them publishable later.
[workspace.dependencies]
cairn-types = { path = "crates/cairn-types", version = "0.0.0" }
cairn-vfs = { path = "crates/cairn-vfs", version = "0.0.0" }
cairn-core = { path = "crates/cairn-core", version = "0.0.0" }
cairn-backend-local = { path = "crates/cairn-backend-local", version = "0.0.0" }
cairn-tui = { path = "crates/cairn-tui", version = "0.0.0" }
cairn-transfer = { path = "crates/cairn-transfer", version = "0.0.0" }
cairn-secrets = { path = "crates/cairn-secrets", version = "0.0.0" }
cairn-vault = { path = "crates/cairn-vault", version = "0.0.0" }
cairn-broker = { path = "crates/cairn-broker", version = "0.0.0" }
cairn-config = { path = "crates/cairn-config", version = "0.0.0" }
cairn-ai = { path = "crates/cairn-ai", version = "0.0.0" }
cairn-backend-object = { path = "crates/cairn-backend-object", version = "0.0.0" }
cairn-plugin = { path = "crates/cairn-plugin", version = "0.0.0" }
cairn-backend-ssh = { path = "crates/cairn-backend-ssh", version = "0.0.0" }


# Lints applied across the whole workspace. Keep the bar high, but keep velocity:
# CI runs clippy with `-D warnings`, so anything at `warn` here is a hard error.
# We deny the correctness group and forbid unsafe; rustdoc is required on public items.
# `pedantic` and the `unwrap/expect` restriction lints are intentionally NOT enabled
# workspace-wide — they fire heavily in tests and are advisory; CLAUDE.md §9 ("no
# unwrap/expect/panic on paths reachable from user input or backends") is enforced by
# review, not by failing every test that uses `.unwrap()`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
todo = "warn"
dbg_macro = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
