[package]
name = "cairn-backend-docker"
description = "Docker/OCI container backend for Cairn: containers & images as a navigable Vfs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# The live Docker engine adapter (bollard). Off by default so the lean, cross-platform build never
# pulls bollard's hyper stack; the full build (Linux-only in CI) and the dind integration job enable
# it. See ADR-0006.
# tokio features: rt = spawn, sync = mpsc/oneshot, macros = select!, time = sleep (inspect_exec
# backoff polling after stream close — the daemon races on exit_code for short-lived execs).
docker = [
    "dep:bollard",
    "dep:tar",
    "tokio/rt",
    "tokio/sync",
    "tokio/macros",
    "tokio/time",
]

[dependencies]
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
async-trait = "0.1"
futures = "0.3"
bollard = { version = "0.21", optional = true }
# The Docker archive API returns a tar stream; `tar` parses it to browse a container's filesystem.
# Pulled only by the live `docker` adapter.
tar = { version = "0.4", optional = true }
# `bytes` is an unconditional dep: `ContainerOps::logs` and `ActionOutcome::Stream` both carry
# `Bytes` payloads, so the trait and mock need it even without the live bollard adapter.
bytes = "1"
smol_str = "0.3"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "time"] }
