[package]
name = "cairn-backend-k8s"
description = "Kubernetes backend for Cairn: contexts/namespaces/pods/containers as a navigable Vfs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# The live Kubernetes adapter (kube-rs). Off by default so the lean, cross-platform build never pulls
# kube's TLS/HTTP stack; the full build (Linux-only in CI) and the kind integration job enable it.
# Pinned to rustls (no OpenSSL); `ws` is for the exec-based pod-fs path. See ADR-0006 / RFC-0005.
k8s = ["dep:kube", "dep:k8s-openapi", "dep:rustls", "dep:tar", "dep:tokio-util", "tokio/rt", "tokio/sync", "tokio/net", "tokio/time"]

[dependencies]
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
async-trait = "0.1"
futures = "0.3"
smol_str = "0.3"
# `bytes` is an unconditional dep: `KubeOps::logs` and `ActionOutcome::Stream` carry `Bytes`
# payloads, so the trait and mock need it even without the live `kube-rs` adapter.
bytes = "1"
tokio = { version = "1", features = ["io-util"] }
# kube-rs client for the live adapter (behind `k8s`). rustls (not openssl); `ring` selects the
# crypto provider (matches kube's own default); `ws` enables pod exec.
kube = { version = "4", optional = true, default-features = false, features = [
    "client",
    "config",
    "rustls-tls",
    "ring",
    "ws",
] }
k8s-openapi = { version = "0.28", optional = true, features = ["latest"] }
# Direct dep only to install the process-wide rustls `CryptoProvider` (rustls 0.23 no longer
# auto-installs one, so kube's client build panics without it). `ring` matches the kube feature above.
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
# Tar parsing for in-container filesystem access (kubectl cp / tar-over-exec semantics).
tar = { version = "0.4", optional = true }
# `CancellationToken` for relay-task teardown in port_forward (behind `k8s`; also in dev-deps for
# the mock echo-server). Already a transitive dep via kube-rs; making it direct pins the version
# and allows explicit feature selection (`sync` only — `io`/`codec` not needed).
tokio-util = { version = "0.7", optional = true, default-features = false }

[dev-dependencies]
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
# CancellationToken for MockKube::port_forward relay teardown in hermetic tests.
tokio-util = { version = "0.7", default-features = false }
