[package]
name = "cairn-backend-object"
description = "Object-store backend for Cairn (S3/GCS/Azure): provider-agnostic core + Vfs mapping."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Real cloud providers (S3/GCS/Azure) are added behind these features; they require the official
# SDKs and live/emulated services and are not built or tested in the default/CI build (ADR-0006).
# `s3` pulls the AWS SDK (aws-lc-rs crypto, hyper) + the typed AWS credential it consumes
# (cairn-vault); off by default so the lean cross-platform build stays SDK-free. The full build
# (Linux) and the MinIO integration job enable it.
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:cairn-vault"]
# `gcs` pulls the Google Cloud Storage SDK + the typed GCP credential it consumes (cairn-vault).
gcs = ["dep:google-cloud-storage", "dep:google-cloud-auth", "dep:cairn-vault", "dep:serde_json"]
# `azure` pulls the Azure Blob SDK + the typed Azure credential it consumes (cairn-vault).
azure = ["dep:azure_storage", "dep:azure_storage_blobs", "dep:cairn-vault"]
# Exposes the in-memory MockObjectStore to dependent crates' tests.
test-utils = []

[dependencies]
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
# Consumed only by the live S3 adapter (the typed AWS credential); the backend is part of the
# execution layer that legitimately handles secrets (AI/plugin isolation is enforced elsewhere).
cairn-vault = { workspace = true, optional = true }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
smol_str = "0.3"
# AWS SDK for the S3 adapter (behind the `s3` feature). `aws-config` keeps its full defaults so the
# `Profile`/`DefaultChain` credential variants resolve via the real chain (incl. SSO and
# `credential_process`). `aws-sdk-s3` drops only the legacy `rustls` feature (an old hyper-0.14 +
# rustls-0.21 + webpki-0.101 connector that carries known webpki advisories); `default-https-client`
# provides the modern hyper-1.x + rustls-0.23 + aws-lc-rs TLS stack we actually use.
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = [
    "sigv4a",
    "http-1x",
    "default-https-client",
    "rt-tokio",
] }
# Google Cloud Storage SDK for the GCS adapter (behind the `gcs` feature). v1 uses reqwest+rustls by
# default (no native-tls/OpenSSL), matching our TLS posture.
google-cloud-storage = { version = "1", optional = true }
# google-cloud-auth is needed directly so we can construct Credentials objects (anonymous for
# the emulator, service-account, and ADC). It is a transitive dep via google-cloud-storage but
# must be declared here to use its types in our code.
google-cloud-auth = { version = "1", optional = true }
# Azure Blob Storage SDK for the Azure adapter (behind the `azure` feature). The 0.21 line (the 1.0
# rewrite `azure_storage_blob` is AAD-only — no shared-key/SAS, so it can't talk to Azurite). 0.21
# supports shared-key, SAS, and bearer via `StorageCredentials`. Rides reqwest+rustls (no OpenSSL).
azure_storage = { version = "0.21", optional = true, default-features = false, features = [
    "enable_reqwest_rustls",
    "hmac_rust",
] }
azure_storage_blobs = { version = "0.21", optional = true, default-features = false, features = [
    "enable_reqwest_rustls",
    "hmac_rust",
] }
# serde_json is needed to parse the service-account key JSON string into the Value that
# google-cloud-auth's service_account::Builder::new requires.
serde_json = { version = "1", optional = true }

[dev-dependencies]
# `net`/`time`/`rt-multi-thread` are only needed by the env-guarded S3 integration test (it drives the
# AWS SDK's hyper client); the hermetic unit tests use only io-util/macros/rt.
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread", "net", "time"] }
