[package]
name = "cairn-backend-ssh"
description = "SSH/SFTP backend for Cairn: the Vfs mapping over SFTP, with a russh-sftp adapter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
russh-sftp = "2"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread"] }
